--- a/examples_frp/ksrpc_frpc.ipynb
+++ b/examples_frp/ksrpc_frpc.ipynb
@@ -23,7 +23,8 @@
     "from ksrpc.run_notebook import main\n",
     "\n",
     "commands = {\n",
-    "    \"ksrpc\": [\"python\", \"-u\", \"-m\", \"ksrpc.run_app\"], # \"--config\", \"./config.py\"  # \"uv\", \"run\"\n",
+    "    # \"ksrpc\": [\"python\", \"-u\", \"-m\", \"ksrpc.run_app\"], # \"--config\", \"./config.py\"  # \"uv\", \"run\"\n",
+    "    \"ksrpc\": [\"python\", \"-u\",\"-m\", \"gunicorn\", \"ksrpc.run_gunicorn:web_app\", \"--bind\", \"0.0.0.0:8080\", \"--worker-class\", \"aiohttp.GunicornWebWorker\"],\n",
     "    \"frpc\": [\"./frpc\", \"-c\", \"./frpc.toml\"],\n",
     "}\n",
     "main(commands, idle_timeout=600, clear_count=35)"
