--- a/examples_frp/ksrpc_frpc2.ipynb
+++ b/examples_frp/ksrpc_frpc2.ipynb
@@ -29,7 +29,7 @@
    "execution_count": null,
    "source": [
     "from ksrpc.run_app import main\n",
-    "main(\"./config.py\")"
+    "main()"
    ]
   }
  ],
